[gd_scene load_steps=4 format=3 uid="uid://bywux7ihilrhq"]

[ext_resource type="Script" path="res://Terrain/TerrainVertex.gd" id="1_qwujj"]

[sub_resource type="SphereMesh" id="SphereMesh_pj3k6"]
radius = 0.1
height = 0.2
radial_segments = 8
rings = 5

[sub_resource type="SphereShape3D" id="SphereShape3D_qfv0q"]
radius = 0.406584

[node name="TerrainVertex" type="Node3D"]
script = ExtResource("1_qwujj")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("SphereMesh_pj3k6")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_qfv0q")

[connection signal="input_event" from="Area3D" to="." method="on_click"]
[connection signal="mouse_entered" from="Area3D" to="." method="on_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="on_mouse_exited"]
